bug(core) Fixing nelmio api documentation
